--- a/index.html
+++ b/index.html
@@ -28,8 +28,7 @@
       <div class="cardInside">
         <h3 class="back">HAPPY BIRTHDAY!</h3>
         <p contenteditable="true">Ahmad Taufiqurahman,</p>
-        <p contenteditable="true">Ucapan selamat ulang tahun! Hidup ini indah, dan kamu membuatnya lebih indah. Semoga
-          tahun ini membawa kebahagiaan yang berlimpah.</p>
+        <p contenteditable="true">Selamat ulang tahun! Semoga tahun ini membawa banyak kebahagiaan, kesehatan, dan kesuksesan dalam hidupmu.</p>
         <p contenteditable="true" class="name">Mayoni</p>
       </div>
     </div>
