--- a/index.html
+++ b/index.html
@@ -1,42 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=Edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Happy Wedding</title>
 
-  <title>Happy Birthday</title>
+    <link rel="icon" href="img/favicon.ico" type="image/x-icon" />
 
-  <link rel="stylesheet" href="style.css">
-</head>
+    <link rel="stylesheet" href="style.css" />
+  </head>
 
-<body>
-  <div class="fireworks"></div>
-  <h2>Click this card</h2>
-  <div class="body">
-    <div class="birthdayCard">
-      <div class="cardFront">
-        <h3 class="happy">HAPPY BIRTHDAY!</h3>
-        <div class="balloons">
-          <div class="balloonOne"></div>
-          <div class="balloonTwo"></div>
-          <div class="balloonThree"></div>
-          <div class="balloonFour"></div>
+  <body>
+    <video autoplay muted loop class="video-background">
+      <source src="video/kontol.mp4" type="video/mp4" />
+      Your browser does not support the video tag.
+    </video>
+
+    <div class="fireworks"></div>
+    <h2>Click this card</h2>
+    <div class="body">
+      <div class="birthdayCard">
+        <div class="cardFront">
+          <h3 class="happy">Happy Wedding!</h3>
+          <div class="balloons">
+            <div class="balloonOne"></div>
+            <div class="balloonTwo"></div>
+            <div class="balloonThree"></div>
+            <div class="balloonFour"></div>
+          </div>
+        </div>
+        <div class="cardInside">
+          <h3 class="back">Happy Wedding!</h3>
+          <p>Rafi Maulana,</p>
+          <p>
+            Selamat menempuh hidup baru! Semoga pernikahan kalian dipenuhi
+            dengan kebahagiaan, cinta, dan kebersamaan yang abadi. Semoga setiap
+            langkah yang kalian ambil bersama membawa berkah dan kebahagiaan
+            yang melimpah.
+          </p>
+          <p class="name">Mayoni</p>
         </div>
       </div>
-      <div class="cardInside">
-        <h3 class="back">HAPPY BIRTHDAY!</h3>
-        <p contenteditable="true">Ahmad Taufiqurahman,</p>
-        <p contenteditable="true">Selamat ulang tahun! Semoga tahun ini membawa banyak kebahagiaan, kesehatan, dan kesuksesan dalam hidupmu.</p>
-        <p contenteditable="true" class="name">Mayoni</p>
-      </div>
     </div>
-  </div>
-  <footer>
-    <center>Design & Develop by <a href="https://www.instagram.com/iammayoni/" target="_blank">iammayoni</a></center>
-  </footer>
-  <script src="main.js"></script>
-</body>
-
+    <footer>
+      <center>
+        Design & Develop by
+        <a href="https://www.instagram.com/iammayoni/" target="_blank"
+          >iammayoni</a
+        >
+      </center>
+    </footer>
+    <script src="main.js"></script>
+  </body>
 </html>
